<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/_name"
       android:id="@+id/name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_nameUser"
        android:textSize="20dp"
        android:id="@+id/nameUser"
        android:layout_below="@id/name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_Lastname"
        android:layout_below="@id/nameUser"
        android:layout_marginTop="10dp"
        android:id="@+id/lastName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_nameUser2"
        android:textSize="20dp"
        android:id="@+id/namUser2"
        android:layout_below="@id/lastName"/>

    <TextView
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="70dp"
        android:layout_marginRight="25dp"
        android:text="@string/likes"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:id="@+id/score"
        android:layout_below="@id/like"
        android:layout_marginRight="40dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textSize="20dp"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/likebtn"
        android:layout_below="@id/score"
        android:layout_marginRight="5dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"/>


</RelativeLayout>