<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="viewModel"
            type="com.nisa.tanpadatabinding30maret20.data.ProfileLiveViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_lable_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/margin_end"
            android:text="@string/_nameUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_lable_name" />

        <TextView
            android:id="@+id/tv_lable_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/_Lastname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_name2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/margin_end"
            android:text="@string/_nameUser2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_lable_last_name" />

        <ImageView
            android:id="@+id/iv_like"
            android:layout_width="74dp"
            android:layout_height="86dp"
            android:layout_marginTop="@dimen/image_margin"
            android:layout_marginEnd="@dimen/image_margin"
            android:contentDescription="@string/imageforlike"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" 
            app:popularityIcon="@{viewModel.popularity}"/>

        <TextView
            android:id="@+id/tv_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/likes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/iv_like"
            app:layout_constraintHorizontal_bias="0.585"
            app:layout_constraintStart_toStartOf="@+id/iv_like"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.154" />

        <Button
            android:id="@+id/btn_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:text="@string/likebtn"
            app:layout_constraintEnd_toEndOf="@+id/iv_like"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/iv_like"
            app:layout_constraintTop_toBottomOf="@+id/tv_like" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_like"
            app:layout_constraintHorizontal_bias="0.525"
            android:max="@{100}"
            app:hideIfZero="@{viewModel.likes}"
            android:progressTint="@{viewModel.popularity}"
            app:progressScaled="@{viewModel.likes}"
            app:layout_constraintStart_toStartOf="@+id/btn_like"
            app:layout_constraintTop_toBottomOf="@+id/btn_like"
            app:layout_constraintVertical_bias="0.077" />

        <TextView
            android:id="@+id/text_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{Integer.toString(viewModel.likes)}"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_like"
            app:layout_constraintEnd_toEndOf="@+id/iv_like"
            app:layout_constraintStart_toStartOf="@+id/iv_like"
            app:layout_constraintTop_toBottomOf="@+id/iv_like" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>